Removing photos section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- DESTAQUES DA SEMANA -->
 
         <div class="container-fluid">
-          <h1 class="display-3 mt-5 text-center">Destaques da Semana</h1>
+          <h1 class="display-3 mt-5 text-center">Destaques Semanais</h1>
           <div class="row mb-5 px-0">
             <div class="col-12 col-md-6 col-xl-3 my-3">
               <div
@@ -345,16 +345,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <!-- FOTOS DE EVENTOS -->
-
-        <h1 class="display-3 text-center">Fotos de Eventos</h1>
-        <div class="row g-2">
-          <div class="col-12 col-md-6 col-xl-3"></div>
-          <div class="col-12 col-md-6 col-xl-3"></div>
-          <div class="col-12 col-md-6 col-xl-3"></div>
-          <div class="col-12 col-md-6 col-xl-3"></div>
         </div>
       </section>
     </main>
