--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Local CSS Link -->
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- favIcon Link -->
@@ -23,10 +26,11 @@
     <title>Arty</title>
   </head>
   <body>
+
     <header class="bg-main">
       <nav class="navbar navbar-expand-lg w-100">
         <div class="container">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img
               style="height: 9vh"
               src="img/logotypelight.png"
@@ -66,7 +70,8 @@
                     <a class="dropdown-item" href="/pesquisar">Pesquisar</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/criarevento">Criar</a>
+                    <!-- <a class="dropdown-item" href="/criar-evento">Criar</a> -->
+                    <a class="dropdown-item" href="register.html">Criar</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="/editarevento">Editar</a>
@@ -374,5 +379,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
