--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Arty</title>
   </head>
-  <body>
+  <body class="d-flex flex-column" style="min-height: 100vh;">
 
     <header class="bg-main">
       <nav class="navbar navbar-expand-lg w-100">
@@ -105,7 +105,7 @@
       </nav>
     </header>
 
-    <main class="bg-main p-5">
+    <main class="bg-main flex-fill p-5">
       <section class="container bg-main">
         <!-- CARROSSEL  -->
 
