--- a/eventregister.html
+++ b/eventregister.html
@@ -44,7 +44,7 @@
               style="--bs-scroll-height: 100px"
             >
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -62,7 +62,7 @@
                   </li>
                   <li>
                     <!-- <a class="dropdown-item" href="/criar-evento">Criar</a> -->
-                    <a class="dropdown-item" href="register.html">Criar</a>
+                    <a class="dropdown-item" href="eventregister.html">Criar</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="/editarevento">Editar</a>
